* https://github.com/docToolchain/docToolchain/issues/1353[#1353: docker: Problem with 3.x images and dependencies?]
* https://github.com/docToolchain/docToolchain/issues/1239[#1239: Execute a custom asciidoctor converter for generateHTML]
* https://github.com/docToolchain/docToolchain/issues/1290[#1290: Custom ruby extension for PDF generation]

=== added

=== changed

== 3.2.2 - 2024-01-18

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1335[#1335 publishToConfluence throws exception when uploading attachments in v3.2.0]
* https://github.com/docToolchain/docToolchain/issues/1343[#1343: Build and publish docs after PR get into ng]

=== added
* https://github.com/docToolchain/docToolchain/issues/1338[#1338: extend the options for the docker environment by additional environment variables and additional parameter sets.]

=== changed

* [Core] Http calls from docToolchain are now identified by a user agent string of format `docToolchain_v<DTCW_VERSION>`.

== 3.2.1 - 2024-01-10

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1330[#1330: Publish to confluence gives response 400 on version 3.2.0]

=== added
* https://github.com/docToolchain/docToolchain/issues/1327[#1327: Allow use of enhanced docker image]
* new task `wipeConfluenceSpace` to delete all pages of a space

=== changed

== 3.2.0 - 2023-12-20

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1307[#1307: powershell: problem to find local installed jdk]
* https://github.com/docToolchain/docToolchain/issues/1300[#1300: publishToConfluence:Cannot handle embedded SVG images]
* https://github.com/docToolchain/docToolchain/issues/1253[#1253: publishToConfluence removes all linebreaks from code]

=== added

=== changed

* https://github.com/docToolchain/docToolchain/issues/1231[#1231: docker: port mapping only needed for previewSite]
* https://github.com/docToolchain/docToolchain/issues/1309[#1309: deprecate previewSite task]