@@ -3,6 +3,7 @@ package org.docToolchain.atlassian.transformer
 import org.docToolchain.util.TestUtils
 import org.jsoup.nodes.Document
 import org.jsoup.nodes.Element
+import org.jsoup.nodes.Entities
 import spock.lang.Specification
 
 class CodeBlockTransformerSpec extends Specification {
@@ -43,4 +44,20 @@ class CodeBlockTransformerSpec extends Specification {
             input.select("div[class=content]").get(0).html().trim() == transformedHtml.select("div[class=content]").get(0).html().trim()
     }
 
+    def "test codeblock transformation with Code that uses generic types"() {
+        setup: "we initialize the transformer"
+        codeBlockTransformer = new CodeBlockTransformer()
+            File expectedHtmlFile = new File("${TestUtils.TEST_RESOURCES_DIR}${TEST_RESOURCE_PATH}/1349-generic-code-transformed.html")
+            Element transformedHtml = new Document("").outputSettings(new Document.OutputSettings().prettyPrint(false)).html(expectedHtmlFile.text)
+        when: 'we pass a HTML section into the transformer'
+            File htmlFile = new File("${TestUtils.TEST_RESOURCES_DIR}${TEST_RESOURCE_PATH}/1349-generic-code.html")
+            Element input = new Document("").outputSettings(new Document.OutputSettings().syntax(Document.OutputSettings.Syntax.xml).prettyPrint(false)).html(htmlFile.text)
+            def result = codeBlockTransformer.transformCodeBlock(input)
+        then:  'there is no exception, the code has not been altered and the code has the expected Confluence structure'
+            noExceptionThrown()
+            // this is the original code, without content anymore
+            result.size() == 1
+            // need to call trim() to avoid whitespace issues, newlines are still preserved. Hence this is sane.
+            input.select("div[class=content]").get(0).html().trim() == transformedHtml.select("div[class=content]").get(0).html().trim()
+    }
 }
