@@ -1,0 +1,51 @@
+<meta charset="UTF-8">
+    <title>Title</title>
+
+
+<div id="header">
+    <div id="toc" class="toc2">
+        <div id="toctitle">Table of Contents</div>
+        <ul class="sectlevel1">
+            <li><a href="#_test_2">Test 2</a></li>
+        </ul>
+    </div>
+</div>
+<div id="content">
+    <div class="sect1">
+        <h2 id="_test_2">Test 2</h2>
+        <div class="sectionbody">
+            <div class="listingblock">
+                <div class="content">
+<ac:structured-macro ac:name="code"><ac:parameter ac:name="language">text</ac:parameter><ac:plain-text-body><![CDATA[public class ComplexModel : IModel
+{
+    private readonly ILoggerFactory loggerFactory;
+    private readonly ILogger<ComplexModel> logger;
+
+    ComplexModel( ILoggerFactory loggerFactory, ... )
+    {
+        this.loggerFactory = loggerFactory;
+        logger = loggerFactory.CreateLogger<ComplexModel>();
+        ...
+    }
+}]]></ac:plain-text-body></ac:structured-macro>
+                </div>
+            </div>
+            <div class="listingblock">
+                <div class="content">
+<ac:structured-macro ac:name="code"><ac:parameter ac:name="language">text</ac:parameter><ac:plain-text-body><![CDATA[<af:button id="_exc" icon="/adf/ikb.adf.basis.ui/images/excel.gif">
+           <af:exportCollectionActionListener type="excelHTML"
+                                               exportedId="_t1"
+                                               exportedRows="all"
+                                               filename="termine.xls"
+                                               title="Kundenbezogene Termine"/>
+</af:button>]]></ac:plain-text-body></ac:structured-macro>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="footer">
+    <div id="footer-text">
+        Last updated 2024-02-01 22:40:04 +0100
+    </div>
+</div>
